--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<main></main>
-	<script src="http://cdn.ractivejs.org/latest/ractive.js"></script>
+	<script src="ractive.min.js"></script>
 	<script src='bundle.js'></script>
 	<script>
 		new App({ el: 'main' });
