--- a/src/auth.html
+++ b/src/auth.html
@@ -47,10 +47,12 @@ component.exports = {
 		};
 	},
 	oninit() {
+		// does a token exist?
 		const token = localStorage.token;
 		const loaded = () => this.set( 'loaded', true );
 
 		if (token) {
+			// is this token valid?
 			fetch('/api/auth/validate', {
 				method: 'post',
 				headers: new Headers({
